--- a/style/blog.css
+++ b/style/blog.css
@@ -2,6 +2,7 @@ div{
     background-color: aqua;
     padding: 20px;
     border: 10px solid green;
+    margin-bottom: 20px;
 }
 h3{
     font-size: 300%;
